--- a/index.html
+++ b/index.html
@@ -1,14 +1,60 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>SimplonWebPage</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-    <script src="main.js"></script>
-</head>
-<body>
+<!doctype html>
+<html lang="fr">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
+    <link rel="stylesheet" href="main.css">
+
+    <title>Simplon Saint-Gaudens</title>
+  </head>
+  <body>
     
-</body>
+    <!-- Header -->
+      <div class="container-fluid " id="header">
+        <div class="container">
+          <div class="container" id="logosimplon">
+            <img src="images/Simplon_Occ_SaintGaudens@4x.png" class="img-fluid " alt="Responsive image">
+          </div>    
+
+              <!-- Modal video youtube-->
+          <div class="row-center">
+              <button type="button" class="btn btn-link" data-toggle="modal" data-target=".bd-example-modal-lg">Simplon St-Gaudens en video</button>
+
+              <div class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog" aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                  <div class="modal-content">
+                    <video src="https://www.youtube.com/watch?v=PspRYBo2_nM"></video>
+                  </div>
+                </div>
+              </div>
+            </div>
+              <!-- Modal video youtube-->
+
+              <div class="container" id="ern">
+                  <img src="images/LOGO_ERN-DROITE.PNG" class="img-thumbnail" alt="Responsive image">
+              </div>
+          </div>
+        </div>
+      </div>
+
+
+    <!-- Header -->
+
+    
+
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+  </body>
 </html>
+
+
+
+<!--col-xs-12 col-sm-12 col-md-4 col-lg-4-->
