header en commentaire

--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
     <!-- Header -->
       <div class="container-fluid " id="header">
         <div class="container">
-          <div class="container" id="logosimplon">
+          <!--<div class="container" id="logosimplon">
             <img src="images/Simplon_Occ_SaintGaudens@4x.png" class="img-fluid " alt="Responsive image">
-          </div>    
+          </div>-->    
 
-              <!-- Modal video youtube-->
+              <!-- Modal video youtube
           <div class="row-center">
               <button type="button" class="btn btn-link" data-toggle="modal" data-target=".bd-example-modal-lg">Simplon St-Gaudens en video</button>
 
@@ -32,13 +32,13 @@
                   </div>
                 </div>
               </div>
-            </div>
-              <!-- Modal video youtube-->
+            </div>-->
+              <!-- Modal video youtube
 
               <div class="container" id="ern">
                   <img src="images/LOGO_ERN-DROITE.PNG" class="img-thumbnail" alt="Responsive image">
               </div>
-          </div>
+          </div>-->
         </div>
       </div>
 
