--- a/index.html
+++ b/index.html
@@ -45,6 +45,15 @@
 
     <!-- Header -->
 
+    <!--Bloc rouge-->
+    <div class="container-fluid " id="conteneurblocrouge">
+      <div class="container" id="blocrouge">
+      <p class="lead text-white"> <strong>"Beaucoup de personnes sont malheureusement obligées de quitter le Comminges pour se former dans des formations post-BAC. La mise en place d'une formation Simplon "développeur/se web" à St Gaudens est donc une excellente initiative pour les apprenants, mais également pour le territoire et son développement économique."</strong> </p>
+      <p class="text-right text-white">-Cyril Gousse, Directeur de Prosoluce et parrain de la promotion Simplon St-Gaudens 2016/2017</p>
+      </div>
+    </div>   
+    <!--Bloc rouge-->
+
     
 
 
