--- a/index.html
+++ b/index.html
@@ -54,6 +54,37 @@
     </div>   
     <!--Bloc rouge-->
 
+    <!--Bloc blanc-->
+    <div class="container " id="blocblanc">
+      <h5 class="col-xs-12">Entreprises, associations, missions locales, établissements scolaires, faites appel à nous pour vos projets.</h5>
+      <div class="col-xs-12">
+        <h6>Notre objectif :</h6>
+        <p>La formation Simplon est fondée sur les principes de l'économie sociale et solidaire auxquels nous adhérons. Nous voulons participer à la création de l’avenir du Comminges en apportant aux acteurs locaux la capacité à intégrer les nouvelles technologies dans leur développement et pérenniser leur activité dans le milieu rural. </p>
+      </div>
+      <div class="col-xs-12">
+        <h6>Notre engagement : </h6>
+        <p>Proposer un foyer local de compétences et de savoir-faire, dynamique et de haut niveau.</p>
+      </div>
+      <div class="col-xs-12">
+        <h6>Nos actions :</h6>
+        <p>Dans une dynamique d’apprentissage nous pouvons d’ores et déjà offrir nos services et notre esprit d'équipe à titre gratuit à travers des projets pédagogiques tels que : </p>
+          <ul id="actions">
+              <li> Création de sites Web ou d'applications mobiles'</li>
+              <li> Gestion de projet</li>
+              <li> Animation d’ateliers</li>
+              <li> Initiation au développement</li>
+          </ul>               
+      </div>
+      <div class="container-fluid">
+        <p>Un projet, une idée, curieux d'en savoir plus, contactez-nous. </p>
+        <img src="images/html.ico" alt="" class="thumbnail">
+        <img src="images/css.ico" alt="" class="thumbnail">
+        <img src="images/js.ico" alt="" class="thumbnail">
+        <img src="images/php.ico" alt="" class="thumbnail">
+      </div>
+    </div>
+    <!--Bloc blanc-->
+
     
 
 
