--- a/index.html
+++ b/index.html
@@ -84,10 +84,47 @@
       </div>
     </div>
     <!--Bloc blanc-->
+    <div class="row">
+      <!-- Footer -->
+      <footer>
+        <div class="col-sm-4 text-left">
+          <p><a href="https://simplon.co/">Simplon France</a></p>
+        </div>
+        
+        <!-- Copyright -->
+        <div class="col-sm-4 text-center">
+          <p>
+            Site web développé par les apprenants de 
+            Simplon Saint-Gaudens-Photos: Odile Cadiou 
+            | &copy; Copyright 2017
+          </p>
+        </div>
+        <!-- /.Copyright -->
 
-    
-
-
+        <!-- Social buttons -->
+        <div class="col-sm-4 text-right">
+          <ul class="list-unstyled list-inline">
+            <li class="list-inline-item">
+              <a class="btn-floating btn-sm btn-fb mx-1">
+                <i class="fa fa-facebook"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a class="btn-floating btn-sm btn-tw mx-1">
+                <i class="fa fa-twitter"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a class="btn-floating btn-sm btn-gh mx-1">
+            <i class="fa fa-github"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+        <!-- /.Social buttons -->
+      </footer>
+      <!-- /.Footer -->
+    </div>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
